--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "username" : "",
     "password" : "",
-    "prefix": "!",
-    "token" : ""
+    "prefix": "",
+    "token" : "",
+    "whatanime" : ""
 }
