--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tenshi-chan",
-  "version": "0.1.0",
+  "version": "0.9.5",
   "description": "Self Bot For Facebook",
   "main": "index.coffee",
   "scripts": {
@@ -19,8 +19,15 @@
   "dependencies": {
     "chalk": "^2.3.2",
     "cheerio": "^1.0.0-rc.2",
+    "express": "^4.16.3",
     "facebook-chat-api": "github:Schmavery/facebook-chat-api",
+    "jimp": "^0.2.28",
     "moment": "^2.21.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "string-replace-with-object": "^1.0.0",
+    "stringinject": "^2.0.2",
+    "strip": "^3.0.0",
+    "vm2": "^3.5.2",
+    "webshot": "^0.18.0"
   }
 }
