--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "step1": "coffee login.coffee",
     "step2": "coffee ./src/index.coffee",
     "step3": "coffee ./src/beta.coffee",
-    "start": "npm run dev-win",
+    "start": "npm run self",
     "group": "npm run step1 & npm run step3",
-    "dev-win": "npm run step1 & npm run step2"
+    "self": "npm run step1 & npm run step2"
   },
   "keywords": [
     "Self",
